crates/cherry-pit-core/tests/compile_fail/envelope_no_struct_literal.stderr
error[E0451]: fields `event_id`, `aggregate_id`, `sequence`, `timestamp`, `correlation_id`, `causation_id` and `payload` of struct `EventEnvelope` are private
  --> tests/compile_fail/envelope_no_struct_literal.rs:29:9
   |
28 |     let _envelope = EventEnvelope::<TestEvent> {
   |                     -------------------------- in this type
29 |         event_id: uuid::Uuid::now_v7(),
   |         ^^^^^^^^ private field
30 |         aggregate_id: AggregateId::new(NonZeroU64::new(1).unwrap()),
   |         ^^^^^^^^^^^^ private field
31 |         sequence: NonZeroU64::new(1).unwrap(),
   |         ^^^^^^^^ private field
32 |         timestamp: jiff::Timestamp::now(),
   |         ^^^^^^^^^ private field
33 |         correlation_id: None,
   |         ^^^^^^^^^^^^^^ private field
34 |         causation_id: None,
   |         ^^^^^^^^^^^^ private field
35 |         payload: TestEvent::Created,
   |         ^^^^^^^ private field
